--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.6.11",
+    "nodemon": "^1.19.1",
     "npm": "^6.11.2"
   }
 }
